<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:background="@color/white"
    android:gravity="left|center"
    android:orientation="horizontal" >

     <CheckBox
            android:id="@+id/cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp" />

        <TextView
            android:id="@+id/tv1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/mcbchbh1"
            android:textColor="@color/balck"
            android:textSize="@dimen/larger_txtsize16" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/dcperson1"
            android:textColor="@color/balck"
            android:textSize="@dimen/larger_txtsize16" />

        <TextView
            android:id="@+id/tv3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/dcdepartment1"
            android:textColor="@color/balck"
            android:textSize="@dimen/larger_txtsize16" />
        <TextView
            android:id="@+id/tv4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/whcd1"
            android:textColor="@color/balck"
            android:textSize="@dimen/larger_txtsize16" />
        <TextView
            android:id="@+id/tv5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/sbr"
            android:textColor="@color/balck"
            android:textSize="@dimen/larger_txtsize16" />
        <TextView
          android:id="@+id/tv6" 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/sbtime"
            android:textColor="@color/balck"
            android:textSize="@dimen/larger_txtsize16" />
        <TextView
            android:id="@+id/tv7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/sbzt"
            android:textColor="@color/balck"
            android:textSize="@dimen/larger_txtsize16" />

        <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginRight="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_view_rounded_image"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="8dp"
            android:text="查看"
            android:textColor="@color/blue"
            android:textSize="@dimen/larger_txtsize16" />

        <TextView
            android:id="@+id/tv9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_view_rounded_image"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="8dp"
            android:text="编辑"
            android:textColor="@color/blue"
            android:textSize="@dimen/larger_txtsize16" />

        <TextView
            android:id="@+id/tv10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_view_rounded_image"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingTop="8dp"
            android:text="上报"
            android:textColor="@color/blue"
            android:textSize="@dimen/larger_txtsize16" />
    </LinearLayout>

</LinearLayout>